callgrind-utils/tests/snapshots/snapshot__arm64_deep_tailcall_chain_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;complex_benchmark <cost>
run_measured;complex_benchmark;walk <cost>
run_measured;complex_benchmark;walk;pool_alloc <cost>
run_measured;complex_benchmark;walk;stage_a <cost>
run_measured;complex_benchmark;walk;stage_a;stage_b <cost>
run_measured;complex_benchmark;walk;stage_a;stage_b;stage_c <cost>
run_measured;complex_benchmark;walk;stage_a;stage_b;stage_c;stage_d <cost>
run_measured;complex_benchmark;walk;stage_a;stage_b;stage_c;stage_d;stage_e <cost>
run_measured;complex_benchmark;walk;stage_a;stage_b;stage_c;stage_d;stage_e;stage_f <cost>
run_measured;complex_benchmark;walk;child_value <cost>
run_measured;complex_benchmark;walk;walk'2 <cost>
run_measured;complex_benchmark;walk;walk'2;pool_alloc <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c;stage_d <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c;stage_d;stage_e <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c;stage_d;stage_e;stage_f <cost>
run_measured;complex_benchmark;walk;walk'2;child_value <cost>
run_measured;complex_benchmark;walk;walk'2;walk'2 <cost>
run_measured;complex_benchmark;walk;walk'2;child_value <cost>
run_measured;complex_benchmark;walk;walk'2;walk'2 <cost>
run_measured;complex_benchmark;walk;child_value <cost>
run_measured;complex_benchmark;walk;walk'2 <cost>
run_measured;complex_benchmark;walk;walk'2;pool_alloc <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c;stage_d <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c;stage_d;stage_e <cost>
run_measured;complex_benchmark;walk;walk'2;stage_a;stage_b;stage_c;stage_d;stage_e;stage_f <cost>
run_measured;complex_benchmark;walk;walk'2;child_value <cost>
run_measured;complex_benchmark;walk;walk'2;walk'2 <cost>
run_measured;complex_benchmark;walk;walk'2;child_value <cost>
run_measured;complex_benchmark;walk;walk'2;walk'2 <cost>
run_measured;complex_benchmark;recursive_sum <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
