callgrind-utils/tests/snapshots/snapshot__arm64_libm_recursion_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;complex_benchmark <cost>
run_measured;complex_benchmark;build_tree <cost>
run_measured;complex_benchmark;build_tree;hash_tree <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;perturb <cost>
run_measured;complex_benchmark;build_tree;perturb;sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;libc_feholdsetround_aarch64_ctx <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;reduce_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;libc_feholdsetround_aarch64_ctx <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;reduce_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;perturb <cost>
run_measured;complex_benchmark;build_tree;perturb;sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;libc_feholdsetround_aarch64_ctx <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;reduce_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;libc_feholdsetround_aarch64_ctx <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;reduce_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sin <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;perturb;sin;do_sincos <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;recursive_sum <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;hash_tree <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
