callgrind-utils/tests/snapshots/snapshot__arm64_longjmp_unwind_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;complex_benchmark <cost>
run_measured;complex_benchmark;??? <cost>
run_measured;complex_benchmark;build_tree <cost>
run_measured;complex_benchmark;build_tree;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;recursive_sum <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;build_tree <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
