callgrind-utils/tests/snapshots/snapshot__arm64_multi_alloc_cycle_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;complex_benchmark <cost>
run_measured;complex_benchmark;build_tree <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;analyze_tree <cost>
run_measured;complex_benchmark;analyze_tree;recursive_sum <cost>
run_measured;complex_benchmark;analyze_tree;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance;??? <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance;collect_leaf <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance;collect_leaf;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance;collect_leaf;collect_leaf'2;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance;??? <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance;??? <cost>
run_measured;complex_benchmark;analyze_tree;compute_variance;???;??? <cost>
run_measured;complex_benchmark;analyze_tree;compute_spread <cost>
run_measured;complex_benchmark;analyze_tree;compute_spread;??? <cost>
run_measured;complex_benchmark;analyze_tree;compute_spread;collect_leaf <cost>
run_measured;complex_benchmark;analyze_tree;compute_spread;collect_leaf;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;compute_spread;collect_leaf;collect_leaf'2;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;compute_spread;??? <cost>
run_measured;complex_benchmark;analyze_tree;compute_spread;???;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;recursive_sum <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance;collect_leaf <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance;collect_leaf;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance;collect_leaf;collect_leaf'2;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_variance;???;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_spread <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_spread;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_spread;collect_leaf <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_spread;collect_leaf;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_spread;collect_leaf;collect_leaf'2;collect_leaf'2 <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_spread;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;compute_spread;???;??? <cost>
run_measured;complex_benchmark;analyze_tree;analyze_tree'2;analyze_tree'2 <cost>
