callgrind-utils/tests/snapshots/snapshot__arm64_recursive_return_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;complex_benchmark <cost>
run_measured;complex_benchmark;build_tree <cost>
run_measured;complex_benchmark;build_tree;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;hash_tree <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;hash_tree <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
run_measured;complex_benchmark;hash_tree;hash_tree'2;hash_tree'2 <cost>
