callgrind-utils/tests/snapshots/snapshot__arm64_tail_call_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;stage_a <cost>
run_measured;stage_a;stage_b <cost>
run_measured;stage_a;stage_b;stage_c <cost>
