callgrind-utils/tests/snapshots/snapshot__arm64_wrapped_alloc_chain_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;complex_benchmark <cost>
run_measured;complex_benchmark;build_tree <cost>
run_measured;complex_benchmark;build_tree;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;pool_alloc <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;child_value <cost>
run_measured;complex_benchmark;build_tree;build_tree'2;build_tree'2 <cost>
run_measured;complex_benchmark;compute_stat <cost>
run_measured;complex_benchmark;compute_stat;alloc_hop1.constprop.0 <cost>
run_measured;complex_benchmark;compute_stat;alloc_hop1.constprop.0;alloc_hop2.constprop.0 <cost>
run_measured;complex_benchmark;compute_stat;alloc_hop1.constprop.0;alloc_hop2.constprop.0;alloc_hop3.constprop.0 <cost>
run_measured;complex_benchmark;compute_stat;alloc_hop1.constprop.0;alloc_hop2.constprop.0;alloc_hop3.constprop.0;??? <cost>
run_measured;complex_benchmark;compute_stat;alloc_hop1.constprop.0;alloc_hop2.constprop.0;alloc_hop3.constprop.0;???;??? <cost>
run_measured;complex_benchmark;compute_stat;alloc_hop1.constprop.0;alloc_hop2.constprop.0;alloc_hop3.constprop.0;???;??? <cost>
run_measured;complex_benchmark;compute_stat;alloc_hop1.constprop.0;alloc_hop2.constprop.0;alloc_hop3.constprop.0;???;??? <cost>
run_measured;complex_benchmark;compute_stat;collect_leaf <cost>
run_measured;complex_benchmark;compute_stat;collect_leaf;collect_leaf'2 <cost>
run_measured;complex_benchmark;compute_stat;collect_leaf;collect_leaf'2;collect_leaf'2 <cost>
run_measured;complex_benchmark;compute_stat;dealloc_hop1 <cost>
run_measured;complex_benchmark;compute_stat;dealloc_hop1;dealloc_hop2 <cost>
run_measured;complex_benchmark;compute_stat;dealloc_hop1;dealloc_hop2;dealloc_hop3 <cost>
run_measured;complex_benchmark;compute_stat;dealloc_hop1;dealloc_hop2;dealloc_hop3;??? <cost>
run_measured;complex_benchmark;compute_stat;dealloc_hop1;dealloc_hop2;dealloc_hop3;???;??? <cost>
run_measured;complex_benchmark;compute_stat;dealloc_hop1;dealloc_hop2;dealloc_hop3;???;???;??? <cost>
