callgrind-utils/tests/snapshots/snapshot__chain_folded.snap
---
source: tests/snapshot.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
main <cost>
main;a <cost>
main;a;b <cost>
main;a;b;c <cost>
